--- a/Uleadz.StaticWeb/Pages/Shared/_Contact.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Contact.cshtml
@@ -18,26 +18,26 @@
                             Enter your details, we’ll get back to you ASAP
                         </div>
                         <div class="group-630">
-                            <div class="your poppins-normal-fuscous-gray-22px">Your Name</div>
+                            <input placeholder="Your Name" type="text" class="your poppins-normal-fuscous-gray-22px" />
                             <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                         </div>
                         <div class="group-63">
-                            <div class="your poppins-normal-fuscous-gray-22px">Your Email</div>
+                            <input placeholder="Your Email" type="email" class="your poppins-normal-fuscous-gray-22px" />
                             <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                         </div>
                         <div class="group-63">
-                            <div class="your poppins-normal-fuscous-gray-22px">Your Company</div>
+                            <input placeholder="Your Company" type="text" class="your poppins-normal-fuscous-gray-22px" />
                             <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                         </div>
                         <div class="group-63">
-                            <div class="your poppins-normal-fuscous-gray-22px">Tell us about your project</div>
+                            <input placeholder="Tell us about your project" type="text" class="your poppins-normal-fuscous-gray-22px" />
                             <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                         </div>
                         <div class="frame-17">
                             <div class="schedule-demo valign-text-middle poppins-semi-bold-white-16px">Schedule Demo</div>
                         </div>
                     </div>
-                    <div class="overlap-group">
+                    @*<div class="overlap-group">
                         <div class="enter-your-details poppins-medium-brilliant-rose-20px">
                             Enter your details, we’ll get back to you ASAP
                         </div>
@@ -60,7 +60,7 @@
                         <div class="frame-17">
                             <div class="schedule-demo valign-text-middle poppins-semi-bold-white-16px">Schedule Demo</div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
             </div>
             <div class="overlap-group9 poppins-medium-white-22px">
