--- a/Uleadz.StaticWeb/Pages/Shared/_Footer.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Footer.cshtml
@@ -16,7 +16,7 @@
                         </a>
                     </div>
                     <div class="group-486">
-                        <a href="/homepage">
+                        <a href="/index">
                             <div class="place-2 valign-text-middle">Home</div>
                         </a>
                         <a href="/why-uleadz">
