--- a/Uleadz.StaticWeb/Pages/Shared/_FooterMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_FooterMobile.cshtml
@@ -13,7 +13,7 @@
                     </a>
                     <div class="group-container poppins-normal-white-16px">
                         <div class="group-486">
-                            <a href="/homepage">
+                            <a href="/index">
                                 <div class="place-link valign-text-middle">Home</div>
                             </a>
                             <a href="/why-uleadz">
