--- a/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentation.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentation.cshtml
@@ -22,9 +22,10 @@
                 <div class="rectangle-226"></div>
                 <div class="overlap-group1">
                     <div class="rectangle-227"></div>
-                    <p class="type-here-to-search poppins-normal-mountain-mist-16px">
+                    <input type="text" placeholder=" Type here to search info about a specific feature, for example “Call Secure”" class="type-here-to-search poppins-normal-mountain-mist-16px" />
+                    @*<p class="type-here-to-search poppins-normal-mountain-mist-16px">
                         Type here to search info about a specific feature, for example “Call Secure”
-                    </p>
+                    </p>*@
                     <div class="rectangle-copy-15"></div>
                     <img class="search" src="~/lib/img/search@2x.svg" />
                     <div class="frame-17">
@@ -106,19 +107,23 @@
                         Enter your details, we’ll get back to you ASAP
                     </div>
                     <div class="group-630">
-                        <div class="your-name poppins-normal-fuscous-gray-22px">Your Name</div>
+                        <input type="text" placeholder="Your Name" class="your-name poppins-normal-fuscous-gray-22px" />
+                        @*<div class="your-name poppins-normal-fuscous-gray-22px">Your Name</div>*@
                         <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                     </div>
                     <div class="group-63">
-                        <div class="your-email poppins-normal-fuscous-gray-22px">Your Email</div>
+                        <input type="email" placeholder="Your Email" class="your-email poppins-normal-fuscous-gray-22px" />
+                        @*<div class="your-email poppins-normal-fuscous-gray-22px">Your Email</div>*@
                         <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                     </div>
                     <div class="group-63">
-                        <div class="your-company poppins-normal-fuscous-gray-22px">Your Company</div>
+                        <input type="text" placeholder="Your Company" class="your-company poppins-normal-fuscous-gray-22px" />
+                        @*<div class="your-company poppins-normal-fuscous-gray-22px">Your Company</div>*@
                         <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                     </div>
                     <div class="group-63">
-                        <div class="tell-us-how-we-can-help poppins-normal-fuscous-gray-22px">Tell us how we can help</div>
+                        <input type="text" placeholder="Tell us how we can help" class="tell-us-how-we-can-help poppins-normal-fuscous-gray-22px" />
+                        @*<div class="tell-us-how-we-can-help poppins-normal-fuscous-gray-22px">Tell us how we can help</div>*@
                         <img class="line-63" src="~/lib/img/line-63@1x.svg" />
                     </div>
                     <div class="frame-17-2">
