--- a/Uleadz.StaticWeb/Pages/Shared/_Menu.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_Menu.cshtml
@@ -1,6 +1,6 @@
 ﻿<header class="nav">
     <div class="menu-nav poppins-medium-hunter-green-16px">
-        <a href="/homepage"><div class="link">Home</div></a>
+        <a href="/index"><div class="link">Home</div></a>
         <a href="/why-uleadz">
             <div class="link">Why Uleadz</div>
         </a>
