--- a/Uleadz.StaticWeb/Pages/industries-locksmith.cshtml
+++ b/Uleadz.StaticWeb/Pages/industries-locksmith.cshtml
@@ -122,9 +122,10 @@
                     </div>
                     <div class="overlap-group8">
                         <div class="rectangle-227"></div>
-                        <p class="looking-for-a-specif poppins-normal-mountain-mist-16px">
+                        <input class="looking-for-a-specif poppins-normal-mountain-mist-16px" placeholder="Looking for a specific Industry? Type here" type="text" />
+                        @*<p class="looking-for-a-specif poppins-normal-mountain-mist-16px">
                             Looking for a specific Industry? Type here
-                        </p>
+                        </p>*@
                         <div class="rectangle-copy-15"></div>
                         <img class="search" src="~/lib/img/search@2x.svg" />
                         <div class="frame-17-2">
