--- a/Uleadz.StaticWeb/Pages/Shared/_ContactMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_ContactMobile.cshtml
@@ -24,19 +24,23 @@
                     Enter your details, we’ll get back to you ASAP
                 </p>
                 <div class="group-1833">
-                    <div class="your-name poppins-normal-delta-14px">Your Name</div>
+                    <input type="text" placeholder="Your Name" class="your-name poppins-normal-delta-14px" />
+                    @*<div class="your-name poppins-normal-delta-14px">Your Name</div>*@
                     <img class="line-63" src="~/lib/img/line-63@2x.png" />
                 </div>
                 <div class="group-183">
-                    <div class="your-email poppins-normal-delta-14px">Your Email</div>
+                    <input type="email" placeholder="Your Email" class="your-email poppins-normal-delta-14px" />
+                    @*<div class="your-email poppins-normal-delta-14px">Your Email</div>*@
                     <img class="line-63" src="~/lib/img/line-63@2x.png" />
                 </div>
                 <div class="group-183">
-                    <div class="your-company poppins-normal-delta-14px">Your Company</div>
+                    <input type="text" placeholder="Your Company" class="your-company  poppins-normal-delta-14px" />
+                    @*<div class="your-company poppins-normal-delta-14px">Your Company</div>*@
                     <img class="line-63" src="~/lib/img/line-63@2x.png" />
                 </div>
                 <div class="group-183">
-                    <p class="tell-us-about-your-project poppins-normal-delta-14px">Tell us about your project</p>
+                    <input type="text" placeholder="Tell us about your project" class="tell-us-about-your-project poppins-normal-delta-14px" />
+                    @*<p class="tell-us-about-your-project poppins-normal-delta-14px">Tell us about your project</p>*@
                     <img class="line-63" src="~/lib/img/line-63@2x.png" />
                 </div>
                 <div class="frame-5"><div class="schedule-demo poppins-normal-white-14px">Schedule Demo</div></div>
