--- a/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentationMobile.cshtml
+++ b/Uleadz.StaticWeb/Pages/Shared/_HelpDocumentationMobile.cshtml
@@ -21,7 +21,8 @@
         <div class="group-container">
             <div class="search-container">
                 <img class="search" src="~/lib/img/search-1@2x.png" />
-                <p class="search-feature-for poppins-normal-mountain-mist-14px">Search feature, for example “Call Sec..”</p>
+                <input type="text" placeholder="Search feature, for example “Call Sec..”" class="search-feature-for poppins-normal-mountain-mist-14px" />
+                @*<p class="search-feature-for poppins-normal-mountain-mist-14px">Search feature, for example “Call Sec..”</p>*@
             </div>
             <div class="group-580">
                 <div class="group-575">
@@ -106,19 +107,23 @@
                         Enter your details, we’ll get back to you ASAP
                     </p>
                     <div class="group-1833">
-                        <div class="your-name poppins-normal-delta-14px">Your Name</div>
+                        <input type="text" placeholder="Your Name" class="your-name poppins-normal-delta-14px" />
+                        @*<div class="your-name poppins-normal-delta-14px">Your Name</div>*@
                         <img class="line-63" src="~/lib/img/line-63@2x.png" />
                     </div>
                     <div class="group-183">
-                        <div class="your-email poppins-normal-delta-14px">Your Email</div>
+                        <input type="email" placeholder="Your Email" class="your-email poppins-normal-delta-14px" />
+                        @*<div class="your-email poppins-normal-delta-14px">Your Email</div>*@
                         <img class="line-63" src="~/lib/img/line-63@2x.png" />
                     </div>
                     <div class="group-183">
-                        <div class="your-company poppins-normal-delta-14px">Your Company</div>
+                        <input type="text" placeholder="Your Company" class="your-company poppins-normal-delta-14px" />
+                        @*<div class="your-company poppins-normal-delta-14px">Your Company</div>*@
                         <img class="line-63" src="~/lib/img/line-63@2x.png" />
                     </div>
                     <div class="group-183">
-                        <p class="tell-us-how-we-can-help poppins-normal-delta-14px">Tell us how we can help</p>
+                        <input type="text" placeholder="Tell us how we can help" class="tell-us-how-we-can-help poppins-normal-delta-14px" />
+                        @*<p class="tell-us-how-we-can-help poppins-normal-delta-14px">Tell us how we can help</p>*@
                         <img class="line-63" src="~/lib/img/line-63@2x.png" />
                     </div>
                     <div class="frame-5"><div class="schedule-demo poppins-normal-white-14px">Schedule Demo</div></div>
