--- a/Uleadz.StaticWeb/wwwroot/css/app/homepage.css
+++ b/Uleadz.StaticWeb/wwwroot/css/app/homepage.css
@@ -1307,3 +1307,12 @@
   top: 398px;
   width: 72px;
 }
+
+input {
+    width: 100%;
+    border: none;
+/*    z-index:2;*/
+}
+input:focus {
+    outline: none;
+}
